...
    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/chat"
        android:title="@string/chat" />

    <item
        android:id="@+id/nav_user"
        android:icon="@drawable/user"
        android:title="@string/user" />

</menu>

