...
        app:layout_constraintTop_toBottomOf="@id/mainDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- For You Button -->
        <Button
            android:id="@+id/buttonForYou"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/for_you"
            android:textSize="20sp"
            android:textStyle="bold"
            android:backgroundTint="@android:color/darker_gray"
...
            app:layout_constraintStart_toEndOf="@id/buttonForYou"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="8dp"/>

        <!-- My Listings Button -->
        <Button
            android:id="@+id/buttonLists"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/myListings"
            android:textSize="20sp"
            android:textStyle="bold"
            android:backgroundTint="@android:color/white"
...
