...
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:inputType="numberDecimal"/>

                <!-- Editable Name -->
                <EditText
                    android:id="@+id/editProductName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/comp_3350_notes"
                    android:textSize="50sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
...
