...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.Fragments.ForYouFragment">

    <!-- RecyclerView to display items -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewForYou"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
